--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
+    "angular2-localstorage": "^0.4.0",
+    "angular2-locker": "^0.5.0",
     "ionic": "^2.2.1",
     "ionic-angular": "2.0.1",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
-    "ng2-canvas-whiteboard": "^1.0.4",
     "ng2-scrollspy": "^0.3.7",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
