--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,9 @@
   "name": "doctorsQueue",
   "app_id": "",
   "v2": true,
-  "typescript": true
+  "typescript": true,
+  "proxies": [{
+  	"path" : "/api",
+  	"proxyUrl" : "http://localhost:8080/medappws"	
+  }]
 }
