--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@ionic-native/action-sheet": "^3.3.1",
+    "@ionic-native/camera": "^3.3.1",
+    "@ionic-native/core": "^3.3.1",
+    "@ionic-native/device": "^3.3.1",
+    "@ionic-native/keyboard": "^3.3.1",
+    "@ionic-native/splash-screen": "^3.3.1",
+    "@ionic-native/status-bar": "^3.3.1",
     "@ionic/storage": "2.0.0",
     "angular2-localstorage": "^0.4.0",
     "angular2-locker": "^0.5.0",
-    "ionic-angular": "2.2.0",
-    "ionic-native": "2.4.1",
+    "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
