--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
     "rxjs": "5.0.1",
+    "sockjs-client": "git+https://github.com/sockjs/sockjs-client.git",
+    "stompjs": "^2.3.3",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.7.2"
   },
