--- a/package.json
+++ b/package.json
@@ -10,38 +10,36 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/compiler-cli": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@ionic-native/action-sheet": "^3.3.1",
-    "@ionic-native/camera": "^3.3.1",
-    "@ionic-native/core": "^3.3.1",
-    "@ionic-native/device": "^3.3.1",
-    "@ionic-native/keyboard": "^3.3.1",
-    "@ionic-native/splash-screen": "^3.3.1",
-    "@ionic-native/status-bar": "^3.3.1",
-    "@ionic/storage": "2.0.0",
-    "angular2-localstorage": "^0.4.0",
-    "angular2-locker": "^0.5.0",
-    "ionic-angular": "2.3.0",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@ionic-native/action-sheet": "^3.5.0",
+    "@ionic-native/camera": "^3.5.0",
+    "@ionic-native/core": "^3.5.0",
+    "@ionic-native/device": "^3.5.0",
+    "@ionic-native/keyboard": "^3.5.0",
+    "@ionic-native/splash-screen": "^3.5.0",
+    "@ionic-native/status-bar": "^3.5.0",
+    "@ionic/storage": "2.0.1",
+    "ionic-angular": "3.0.0",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.1",
+    "ngx-webstorage": "^1.8.0",
+    "rxjs": "5.1.1",
     "sockjs-client": "git+https://github.com/sockjs/sockjs-client.git",
     "stompjs": "^2.3.3",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^1.0.0",
+    "@ionic/app-scripts": "1.3.0",
     "gulp": "^3.9.1",
     "gulp-ts-config": "^1.0.11",
-    "typescript": "2.0.9",
+    "typescript": "~2.2.1",
     "yargs": "^7.0.2"
   },
   "cordovaPlugins": [
