--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/animations": "4.0.2",
+    "@angular/common": "4.0.2",
+    "@angular/compiler": "4.0.2",
+    "@angular/compiler-cli": "4.0.2",
+    "@angular/core": "4.0.2",
+    "@angular/forms": "4.0.2",
+    "@angular/http": "4.0.2",
+    "@angular/platform-browser": "4.0.2",
+    "@angular/platform-browser-dynamic": "4.0.2",
     "@ionic-native/action-sheet": "^3.5.0",
-    "@ionic-native/camera": "^3.5.0",
+    "@ionic-native/camera": "^3.5.0", 
     "@ionic-native/core": "^3.5.0",
     "@ionic-native/device": "^3.5.0",
     "@ionic-native/keyboard": "^3.5.0",
     "@ionic-native/splash-screen": "^3.5.0",
     "@ionic-native/status-bar": "^3.5.0",
     "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.0.0",
+    "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
     "ngx-webstorage": "^1.8.0",
     "rxjs": "5.1.1",
     "sockjs-client": "git+https://github.com/sockjs/sockjs-client.git",
     "stompjs": "^2.3.3",
     "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.3.0",
+    "@ionic/app-scripts": "1.3.4",
     "gulp": "^3.9.1",
     "gulp-ts-config": "^1.0.11",
     "typescript": "~2.2.1",
