--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^3.5.0",
     "@ionic-native/device": "^3.5.0",
     "@ionic-native/keyboard": "^3.5.0",
+    "@ionic-native/network": "^3.6.1",
     "@ionic-native/splash-screen": "^3.5.0",
     "@ionic-native/status-bar": "^3.5.0",
     "@ionic/storage": "2.0.1",
