--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
     "@ionic-native/action-sheet": "^3.5.0",
-    "@ionic-native/camera": "^3.5.0", 
-    "@ionic-native/core": "^3.5.0",
+    "@ionic-native/camera": "^3.5.0",
+    "@ionic-native/core": "^3.6.1",
     "@ionic-native/device": "^3.5.0",
+    "@ionic-native/file": "^3.6.1",
     "@ionic-native/keyboard": "^3.5.0",
     "@ionic-native/splash-screen": "^3.5.0",
     "@ionic-native/status-bar": "^3.5.0",
