--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "angular2-moment": "^1.3.3",
     "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.6.0",
     "ngx-webstorage": "^1.8.0",
     "rxjs": "5.1.1",
     "sockjs-client": "git+https://github.com/sockjs/sockjs-client.git",
